syntax = "proto3";

package logpilot;

option java_package = "com.logpilot.grpc.proto";
option java_outer_classname = "LogPilotProto";

service LogService {
  rpc SendLog (LogRequest) returns (LogResponse);
  rpc SendLogs (SendLogsRequest) returns (SendLogsResponse); // LogPilot extension
  rpc ListLogs (ListLogsRequest) returns (ListLogsResponse);
  rpc FetchLogs (FetchLogsRequest) returns (FetchLogsResponse);
  rpc Seek (SeekRequest) returns (SeekResponse);
}

message LogRequest {
  string channel = 1;
  string level = 2;
  string message = 3;
  map<string, string> meta = 4;
  string storage = 5;
}

message LogResponse {
  string status = 1;
  string message = 2;
}

message SendLogsRequest {
  repeated LogRequest log_requests = 1;
}

message SendLogsResponse {
  string status = 1;
  string message = 2;
}

message ListLogsRequest {
  string storage = 1;
  string channel = 2;
  string level = 3;
  int64 fromTimestamp = 4;
  int64 toTimestamp = 5;
}

message ListLogsResponse {
  repeated LogEntry logs = 1;
}

message FetchLogsRequest {
  string since = 1;
  string channel = 2;
  int32 limit = 3;
  string storage = 4;
}

message FetchLogsResponse {
  repeated LogEntry logs = 1;
}

message SeekRequest {
  string channel = 1;
  string consumerId = 2;
  string operation = 3; // EARLIEST, LATEST, SPECIFIC
  int64 logId = 4; // Only for SPECIFIC
  string storage = 5;
}

message SeekResponse {
  string status = 1;
  string message = 2;
}

message LogEntry {
  string channel = 1;
  string level = 2;
  string message = 3;
  map<string, string> meta = 4;
  int64 timestamp = 5;
  int64 id = 6;
}